Split the login in components

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -25,6 +25,16 @@ html {
   opacity: 0.6;
 }
 
+.dropzone {
+  text-align: center;
+  font-weight: 400;
+  padding: 0.75rem 1.0625rem;
+  font-size: 13px;
+  border: 1px dashed #d6d6d6;
+  border-radius: 0.375rem;
+  color: #4f4f4f;
+  outline: none;
+}
 
 /* Navbar
 -------------------------------------------------- */
